--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 version: 0.01
 src: 
-  host: rr-wz9ze9abh7y495b99io.mysql.rds.aliyuncs.com
-  user: all_data_reader
-  pwd: itnNjXofTruKud19
+  host: 172.16.3.158
+  user: root
+  pwd: 123456
   dbname: spa_finances_2021
   port: 3306
 dst: 
